added the actuator to the client

--- a/client/src/main/resources/application.yaml
+++ b/client/src/main/resources/application.yaml
@@ -8,3 +8,17 @@
 
 cloud:
     name: "ansalemo-springboot (local)"
+
+spring:
+    jmx:
+        enabled: true
+        
+management:
+    endpoints:
+        jmx:
+            exposure:
+                include: '*'
+
+        web:
+            exposure:
+                include: '*'
