testing other .yaml names

--- a/client/src/main/resources/application.yaml
+++ b/client/src/main/resources/application.yaml
@@ -9,16 +9,16 @@
 cloud:
     name: "ansalemo-springboot (local)"
 
-spring:
-    jmx:
-        enabled: true
+# spring:
+#     jmx:
+#         enabled: true
         
-management:
-    endpoints:
-        jmx:
-            exposure:
-                include: '*'
+# management:
+#     endpoints:
+#         jmx:
+#             exposure:
+#                 include: '*'
 
-        web:
-            exposure:
-                include: '*'
+#         web:
+#             exposure:
+#                 include: '*'
