--- a/config/ansalemo-sprinboot.yaml
+++ b/config/ansalemo-sprinboot.yaml
@@ -1,2 +1,20 @@
 cloud:
     name: "ansalemo-springboot (2)"
+
+spring:
+    jmx:
+        enabled: true
+    cloud:
+         config:
+          auto-refresh: true
+          refresh-interval: 60
+        
+management:
+    endpoints:
+        jmx:
+            exposure:
+                include: '*'
+
+        web:
+            exposure:
+                include: '*'
