testing application.yaml changes again

--- a/client/src/main/resources/application.yaml
+++ b/client/src/main/resources/application.yaml
@@ -24,4 +24,5 @@ management:
                 include: '*'
         web:
             exposure:
-                include: '*'
+                include: 
+                - refresh
