added eureka client dependency to scg

--- a/spring-cloud-gateway-local/src/main/resources/application.yaml
+++ b/spring-cloud-gateway-local/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 9999
 spring:
   application:
-    name: aca  
+    name: spring-cloud-gateway  
   cloud:
     gateway:
       routes:
